--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,14 @@
-<h1>Home</h1>
+<h1>home</h1>
 
+<form action="/logout" method="get">
+
+    <input type="submit" value="logout">
+
+</form>
+
+<!--<form action="/createtable" method="get">
+    <input type="submit" value="Criar Tabela">
+</form>-->
 <form action="/alltables" method="get">
     <input type="submit" value="Criar Tabela">
 </form>
@@ -7,3 +16,4 @@
 <form action="/calculos" method="get">
     <input type="submit" value="balanço">
 </form>
+
