--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,23 @@
-<h1>Login</h1>
+<link rel="stylesheet" href="/public/logincss.css">
 
-<button>
-    <a href="/home">Balanço</a>
-</button>
+<div class="formlogin">
+
+<h1 class="formlogin">Login</h1>
+
+
+<div class="formlogin">
+    <form action="/registered" method="post">
+
+        <span class="formlogin" for="Your name">Your name:</span>
+        <input type="text" name="user" id="" placeholder="        Insert Your name">
+    
+        <span class="formlogin" for="Password">Password:</span>
+        <input type="password" name="password" id="" placeholder="          Your password">
+
+        <button type="submit" class="formlogin">Logar</button>
+       
+    
+    </form>
+</div>
+
+</div>
